--- a/templates/home.html
+++ b/templates/home.html
@@ -2,46 +2,32 @@
 <html>
   <head>
     <title>Jobs and Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1{
-        font-size:40px;
-        font-family:Roboto;
-        font-weight:normal;
-        color:rgb(100,100,100);
-        text-align:center;
-      }
       #banner {
-        width:100%;
         height:360px;
+        width:100%;
         object-fit:cover;
-      }
-      h2 {
-        font-family:Roboto;
-        font-size:32px;
-        color:rgb(100,100,100);
-        text-align:center;
-        font-weight:normal;
-      }
-      .bodytext {
-        font-family:Roboto;
-        color:rgb(80,80,80);
-      }
-      #container {
-        max-width:720px;
-        margin:0 auto 0 auto;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-    <h1>Jobs and Careers</h1>
-    <img id="banner" src="static/banner.jpg">
-    <p class="bodytext">Lorem ipsum odor amet, consectetuer adipiscing elit. Quam lobortis consectetur gravida himenaeos ridiculus hendrerit. Ut ante diam congue taciti donec volutpat nascetur. Habitasse mus odio augue; accumsan nunc vestibulum. Egestas tristique penatibus diam ultricies semper adipiscing phasellus turpis. Justo dapibus arcu laoreet at dictumst porttitor augue auctor massa. Aliquam arcu curae quis eros erat. Mi quam amet enim ligula sagittis.</p>
-    <h2>Open Jobs</h2>
-    <p class="bodytext">TODO - Show the jobs here</p>
-      <div style="text-align:center">
-      <button>Contact Us</button>
-        <p>Copyright 2025, Jobs and Careers</p>
+    <div class="container">
+    <h1 class="text-center mt-2 mb-4">Jobs and Careers</h1>
+      <img class="img-fluid" id="banner" src="static/banner.jpg">
+        <h2 class="text-center">About Jobs and Careers</h2>
+    <p class="lead">Lorem ipsum odor amet, consectetuer adipiscing elit. Quam lobortis consectetur gravida himenaeos ridiculus hendrerit. Ut ante diam congue taciti donec volutpat nascetur. Habitasse mus odio augue; accumsan nunc vestibulum. Egestas tristique penatibus diam ultricies semper adipiscing phasellus turpis. Justo dapibus arcu laoreet at dictumst porttitor augue auctor massa. Aliquam arcu curae quis eros erat. Mi quam amet enim ligula sagittis.</p>
+    <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
+      <div class="text-center">
+      <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-4">Copyright 2025, Jobs and Careers</p>
       </div>
     </div>
   </body>
